# SIRFPROJECT

./: .gitignore  CMakeLists.txt  DataContainer.h  DataHandle.h  NOTICE.txt  README.md  Untitled.ipynb  _ala.pyd  _test.pyd  ala.py  python_test_file.py  test.cxx  test.h  test.i  test.py  test_functionality.m  test_functionality.py  testmain.cxx  untitled8.py
swigtest/: CMakeLists.txt  test.cxx  test.i  test_functionality.py
